fix sourcecode overflow behavior
sourcecode should produce a scrollbar inside of the code when it wraps,
not make the whole page wider.

source of the issue: `display: flex` on a high level containing element.

--- a/src/assets/stylesheets/layout.scss
+++ b/src/assets/stylesheets/layout.scss
@@ -314,6 +314,12 @@ blockquote p {
   margin-bottom: 0;
 }
 
+.sourceCode {
+  display: flex;
+  overflow: auto;
+  width: 100%;
+}
+
 pre {
   max-width: 100%;
 }
